infra/workshop-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: workshop-ingress
  namespace: shoppingportal
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
  - http:
      paths:
      - path: /productms
        backend:
          serviceName: productservice
          servicePort: 80
      - path: /productreviewms
        backend:
          serviceName: productreviewservice
          servicePort: 80
